I change images layout - fixed overlay on smaller screens

--- a/output.css
+++ b/output.css
@@ -1290,6 +1290,10 @@ input:checked + .toggle-bg {
   height: 100vh;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .max-h-full {
   max-height: 100%;
 }
@@ -1322,10 +1326,6 @@ input:checked + .toggle-bg {
   width: 2rem;
 }
 
-.w-\[180px\] {
-  width: 180px;
-}
-
 .w-\[200px\] {
   width: 200px;
 }
@@ -1342,8 +1342,8 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
-.w-\[220px\] {
-  width: 220px;
+.w-12 {
+  width: 3rem;
 }
 
 .max-w-2xl {
@@ -1531,6 +1531,10 @@ input:checked + .toggle-bg {
   border-radius: 0.375rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-e-lg {
   border-start-end-radius: 0.5rem;
   border-end-end-radius: 0.5rem;
@@ -1658,6 +1662,11 @@ input:checked + .toggle-bg {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 36 36 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/Images\/ajutorare\.jpeg\'\)\] {
   background-image: url('./Images/ajutorare.jpeg');
 }
@@ -1668,10 +1677,6 @@ input:checked + .toggle-bg {
 
 .bg-\[url\(\'\.\/Images\/bible\.jpg\'\)\] {
   background-image: url('./Images/bible.jpg');
-}
-
-.bg-\[url\(\'\.\/Images\/biserica-inside\.jpg\'\)\] {
-  background-image: url('./Images/biserica-inside.jpg');
 }
 
 .bg-\[url\(\'\.\/Images\/cor_baietii\.jpg\'\)\] {
@@ -1712,6 +1717,25 @@ input:checked + .toggle-bg {
 
 .bg-\[url\(\'\.\/Images\/traducere\.jpg\'\)\] {
   background-image: url('./Images/traducere.jpg');
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-black {
+  --tw-gradient-from: #000000 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-transparent {
+  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-black {
+  --tw-gradient-to: #000000 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1803,11 +1827,6 @@ input:checked + .toggle-bg {
   padding-right: 2rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -1826,11 +1845,6 @@ input:checked + .toggle-bg {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pb-12 {
@@ -1969,6 +1983,11 @@ input:checked + .toggle-bg {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1979,6 +1998,18 @@ input:checked + .toggle-bg {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .shadow {
@@ -2618,10 +2649,6 @@ video {
     margin-top: 1.5rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:h-\[200px\] {
     height: 200px;
   }
@@ -2677,6 +2704,11 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .md\:opacity-50 {
